# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "description": "This is the API for cuHacking 2020.",
-    "version": "1.2",
+    "version": "1.2-dev",
     "title": "Magneton (cuHacking 2020 API)",
     "license": {
       "name": "Apache 2.0",
@@ -31,6 +31,10 @@
     {
       "name": "Applications",
       "description": "Applications for the event"
+    },
+    {
+      "name": "QR Codes",
+      "description": "Handles scanning QR codes"
     }
   ],
   "schemes": [
@@ -766,6 +770,48 @@
             "description": "Can be a partial version of this schema  (e.g. you can submit just the basicInfo, or just the status, etc.) Make sure that the status is \"submitted\"",
             "schema": {
               "$ref": "#/definitions/Application"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "The user's application was successfully submitted"
+          },
+          "400": {
+            "description": "User's token or input data waS invalid"
+          },
+          "404": {
+            "description": "User could not be found"
+          },
+          "500": {
+            "description": "Error saving the application"
+          }
+        }
+      }
+    },
+    "/scan": {
+      "post": {
+        "tags": [
+          "QR Codes"
+        ],
+        "summary": "Scans a user for an event",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "uid": {
+                  "type": "string"
+                },
+                "eventId": {
+                  "type": "string"
+                }
+              }
             }
           }
         ],
